feat: integracion final